# libmalloc

./: CMakeLists.txt  README.md
Extra/: libmalloc.pc.in
Lib/: alloc.c
Lib/public/malloc/: alloc.h
Tests/: CMakeLists.txt  main.c  test_malloc.c  test_malloc.h
